--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 body {
     font-family: "Open Sans", serif;
 }
+.description-color{
+    color:  #757575;;
+}
 
 header {
     background-image: url(images/developer.png), url(images/header_bg.png);
@@ -102,4 +105,60 @@ nav ul li {
 
 .banner-img img{
     vertical-align: bottom;
+}
+main{
+    padding: 0 230px;
+}
+section{
+    margin: 130px 0;
+}
+
+.about-me{
+    background-color: #FFF8F3;
+    padding: 156px 220px;
+    border-radius: 10px;
+}
+.info-border{
+    border: 1px solid gray;
+    padding: 5px;
+}
+.about-me h1{
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    color: #181818;
+}
+.about-me p{
+    font-size: 18px;
+    text-align: center;
+    color: #757575;
+    padding: 30px 0;
+}
+.about-me-bg{
+    background-color: white;
+}
+.about-cart{
+    display: flex;
+    justify-content: space-around;
+    color: #757575;
+}
+.what-i-do-info{
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
+}
+.what-i-do-cart-container{
+    display: flex;
+    gap: 24px;
+    margin-top: 50px;
+}
+.what-i-do-cart-container div{
+    box-shadow: 0px 0px 15px 1px rgb(196, 196, 196);
+    padding: 30px;
+}
+.what-i-do-cart-container div h2{
+    margin: 20px 0;
+}
+.what-i-do-cart-container div p{
+    color: #757575;
 }
