--- a/style.css
+++ b/style.css
@@ -8,8 +8,10 @@
 body {
     font-family: "Open Sans", serif;
 }
-.description-color{
-    color:  #757575;;
+
+.description-color {
+    color: #757575;
+    ;
 }
 
 header {
@@ -103,62 +105,113 @@ nav ul li {
     color: #FD6E0A;
 }
 
-.banner-img img{
+.banner-img img {
     vertical-align: bottom;
 }
-main{
+
+main {
     padding: 0 230px;
 }
-section{
+
+section {
     margin: 130px 0;
 }
 
-.about-me{
+.about-me {
     background-color: #FFF8F3;
     padding: 156px 220px;
     border-radius: 10px;
 }
-.info-border{
+
+.info-border {
     border: 1px solid gray;
     padding: 5px;
 }
-.about-me h1{
+
+.about-me h1 {
     font-size: 35px;
     font-weight: 700;
     text-align: center;
     color: #181818;
 }
-.about-me p{
+
+.about-me p {
     font-size: 18px;
     text-align: center;
     color: #757575;
     padding: 30px 0;
 }
-.about-me-bg{
+
+.about-me-bg {
     background-color: white;
 }
-.about-cart{
+
+.about-cart {
     display: flex;
     justify-content: space-around;
     color: #757575;
 }
-.what-i-do-info{
+
+.what-i-do-info {
     text-align: center;
     width: 80%;
     margin: 0 auto;
 }
-.what-i-do-cart-container{
+
+.what-i-do-cart-container {
     display: flex;
     gap: 24px;
     margin-top: 50px;
 }
-.what-i-do-cart-container div{
+
+.what-i-do-cart-container div {
     box-shadow: 0px 0px 15px 1px rgb(196, 196, 196);
     padding: 30px;
 }
-.what-i-do-cart-container div h2{
+
+.what-i-do-cart-container div h2 {
     margin: 20px 0;
 }
-.what-i-do-cart-container div p{
+
+.what-i-do-cart-container div p {
     color: #757575;
+}
+
+.resume-summary-container>h1 {
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    padding: 0px 0 130px 0;
+}
+
+.resume-summary {
+    display: flex;
+    gap: 20px;
+}
+
+.education>h1,
+.experience>h1 {
+    font-size: 30px;
+    font-weight: 700;
+    color: #474747;
+    margin-bottom: 30px;
+}
+.education>div>h1,
+.experience>div>h1 {
+    font-size: 25px;
+    font-weight: 700;
+    color: #474747;
+}
+.education>div>h3,
+.experience>div>h3 {
+    font-size: 20px;
+    font-weight: 600;
+    color: #757575;
+    margin: 10px 0 20px 0;
+}
+.education>div>p,
+.experience>div>p {
+    font-size: 16px;
+    color: #757575;
+    margin: 20px 0 30px 0;
 }
