--- a/style.css
+++ b/style.css
@@ -196,12 +196,14 @@ section {
     color: #474747;
     margin-bottom: 30px;
 }
+
 .education>div>h1,
 .experience>div>h1 {
     font-size: 25px;
     font-weight: 700;
     color: #474747;
 }
+
 .education>div>h3,
 .experience>div>h3 {
     font-size: 20px;
@@ -209,9 +211,57 @@ section {
     color: #757575;
     margin: 10px 0 20px 0;
 }
+
 .education>div>p,
 .experience>div>p {
     font-size: 16px;
     color: #757575;
     margin: 20px 0 30px 0;
+    width: 80%;
+}
+
+.btn-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.lets-connect {
+    background: #FFF8F3;
+    padding: 130px 230px;
+    display: flex;
+    gap: 50px;
+}
+
+.lets-connect div h1 {
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.lets-connect div p {
+    width: 80%;
+}
+
+.footer-icon-container {
+    display: flex;
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.footer-form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 15px;
+    border: none;
+    outline: none;
+    width: 400px;
 }
