--- a/style.css
+++ b/style.css
@@ -265,3 +265,113 @@ textarea {
     outline: none;
     width: 400px;
 }
+
+
+/* media query */
+@media screen and (max-width:
+576px) {
+    header{
+        margin-bottom: 0;
+    }
+    .banner-img>img{
+        width: 100vw;
+    }
+    .btn-group{
+        flex-direction: column;
+    }
+    nav{
+        padding: 10px;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        flex-direction: column;
+    }
+    .banner{
+        flex-direction: column;
+        margin: 10px;
+    }
+    main{
+        padding: 10px;
+    }
+    .about-me{
+        padding: 0;
+    }
+    .about-cart{
+        justify-content: center;
+        gap: 13px;
+        flex-wrap: wrap;
+    }
+    .what-i-do-cart-container{
+        flex-wrap: wrap;
+    }
+    .what-i-do-info {
+        width: 100%
+    }
+    .resume-summary{
+        flex-direction: column;
+    }
+    .resume-summary-container>h1 {
+        padding: 0px 0 30px 0;
+    }
+    .lets-connect{
+        flex-direction: column;
+        padding: 10px;
+    }
+}
+@media screen and (min-width:
+576px) and (max-width: 768px){
+    nav{
+        padding: 10px;
+    }
+    .btn-group{
+        flex-direction: column;
+    }
+    header{
+        background-image: none;
+        margin-bottom: 0;
+    }
+    .banner-img>img{
+        width: 100vw;
+    }
+    .banner-info>h1{
+        font-size: 60px;
+    }
+    .btn-group{
+        flex-direction: column;
+    }
+    nav{
+        flex-direction: column;
+        padding: 10px;
+    }
+    .banner{
+        flex-direction: column;
+        margin: 10px;
+    }
+    main{
+        padding: 10px;
+    }
+    .about-me{
+        padding: 0;
+    }
+    .about-cart{
+        justify-content: start;
+        gap: 13px;
+        flex-wrap: wrap;
+    }
+    .what-i-do-cart-container{
+        flex-direction: column;
+    }
+    .what-i-do-info {
+        width: 100%
+    }
+    .resume-summary{
+        flex-direction: column;
+    }
+    .resume-summary-container>h1 {
+        padding: 0px 0 30px 0;
+    }
+    .lets-connect{
+        flex-direction: column;
+        padding: 10px;
+    }
+}
